--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,19 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicons/favicon.ico" />
+
+    <!-- <link rel="icon" type="image/x-icon" href="/favicons/favicon.ico" /> -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicons/favicon-48x48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64x64.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/favicons/favicon-128x128.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicons/favicon-256x256.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/favicons/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/favicons/android-chrome-512x512.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700" rel="stylesheet" />
